Update README file

--- a/README
+++ b/README
@@ -1,11 +1,9 @@
-I want to be able to use XY compressed files (and maybe LZMA files)
-under older versions of Python, so decided to backport 'lzma' from
-Python 3.3.
+Introduction
+============
 
 Python 3.3 onwards includes in the standard library module 'lzma',
 providing support for working with LZMA and XY compressed files via
-the XZ Utils C library (XY Utils is in a sense LZMA v2). I'm not
-sure why they Python module is still called 'lzma', but it is.
+the XZ Utils C library (XY Utils is in a sense LZMA v2). See:
 
 * Python's lzma - http://docs.python.org/dev/library/lzma.html
 * XZ Utils - http://tukaani.org/xz/
@@ -17,3 +15,25 @@ no XY support).
 * PylibLZMA - http://pypi.python.org/pypi/pyliblzma
 * PyLZMA - http://pypi.python.org/pypi/pylzma/
 * LZMA Utils - http://tukaani.org/lzma/
+
+
+Supported Platforms
+===================
+
+The 'lmza' module provided with Python 3.3 should work on all the
+main operating systems, so in theory so too should this backport.
+
+Mac OS X: Tested under Python 3.1, 3.2 and 3.3
+Linux: Tested under Python 3.2 (so far)
+Windows: Untested (so far)
+
+Support on Python 2.x would be nice to have too, but a lot more
+work.
+
+
+Automated Testing
+=================
+
+TravisCI is being used for continuous integration testing under
+32-bit Linux, currently only for Python 3.2, see:
+https://travis-ci.org/peterjc/backports.lzma
